# archive_pogchamp_emote

./: .gitignore  README.md  archive_pogchamp_emote.sublime-workspace  cli.py  pyproject.toml
archive_pogchamp_emote/: application.py  constants.py  main.py  model.py  utils.py
libs/: bfa-18.2.0-py2.py3-none-any.whl
tests/: test_archive_pogchamp_emote.py
